--- a/shippable.yml
+++ b/shippable.yml
@@ -2,6 +2,14 @@ language: php
 
 php: 
   - 5.4
+  - 5.5
+  - 5.6
+  - "7.0"
+  
+build_image: drydock/u14phpall:tip
+
+services:
+  - mysql
 
 env:
   global:
