--- a/shippable.yml
+++ b/shippable.yml
@@ -2,7 +2,15 @@ language: php
 
 php: 
   - 5.4
+  - 5.5
+  - 5.6
+  - "7.0"
 
+build_image: drydock/u12phpall:tip
+
+services:
+  - mysql
+  
 env:
   global:
     - RDS_HOSTNAME=127.0.0.1 RDS_USERNAME=shippable RDS_PASSWORD="" RDS_DB_NAME=test RDS_PORT=3306
